# data-science-extensions

./: .gitignore  .gitmodules  .pre-commit-config.yaml  README.md  mkdocs.yaml  pyproject.toml  versions.json
,github/workflows/: cd.yml
.github/workflows/: build_docs.yml  cd.yml  cd_releases.yml  cd_sub_pages.yml  deploy_docs.yml
docs/: index.md
docs/guides/: index.md  querying-data.md
docs/guides/handling-missing-data/: index-r.ipynb  index-r.md  index.ipynb  index.md
docs/guides/handling-missing-data/images/: 00_seasonal_data_with_missing.html  01_filling_using_random_distribution.html  02_filling_using_feed_forward.html  03_filling_using_imputation.html  04_filling_using_interpolation.html  05_filling_using_arima_forecasting.html  06_filling_using_machine_learning_1.html  06_filling_using_machine_learning_2.html
docs/guides/querying-data/: index-pandas-r.ipynb  index-pandas-r.md  index-pandas-reformatted.ipynb  index-pandas-reformatted.md  index-pandas.md  index-polars-r.ipynb  index-polars-r.md  index-polars-reformatted.ipynb  index-polars-reformatted.md  index-polars.md  index-pyspark-r.ipynb  index-pyspark-r.md  index-pyspark-reformatted.ipynb  index-pyspark-reformatted.md  index-pyspark.md  index-r.ipynb  index-r.md  index-reformatted.ipynb  index-reformatted.md  index-sql-r.ipynb  index-sql-r.md  index-sql-reformatted.ipynb  index-sql-reformatted.md  index-sql.md  index.md  querying-data-reformatted.ipynb  querying-data-reformatted.md
docs/guides/querying-data/images/: pt2_total_sales_by_category_pd.html  pt2_total_sales_by_category_pl.html  pt2_total_sales_by_category_ps.html  pt2_total_sales_by_category_sql.html  pt4_daily_sales_with_7d_avg_pd.html  pt4_daily_sales_with_7d_avg_pl.html  pt4_daily_sales_with_7d_avg_ps.html  pt4_daily_sales_with_7d_avg_sql.html
docs/overrides/assets/stylesheets/: code_chunks.css  style.css
docs/toolboxes/: docstring-format-checker.md  synthetic-data-generators.md  toolbox-pyspark.md  toolbox-python.md  ts-stat-tests.md
latest/: index.html
latest/guides/querying-data/: index-r.ipynb
latest/toolboxes/docstring-format-checker/: index.html
latest/toolboxes/synthetic-data-generators/: index.html
latest/toolboxes/toolbox-python/: index.html
src/cli/: scripts.py
src/cli/docs/: formatting.sh  mkdocs.sh
src/cli/init/: uv.sh
src/data_science_extensions/: __init__.py
v0.1.0/: 404.html
v0.1.0/toolboxes/toolbox-pyspark/: index.html
v0.2.0/: 404.html
v0.2.0/overrides/: home.html
v0.2.0/toolboxes/toolbox-pyspark/: index.html
v0.2.0/toolboxes/toolbox-python/: index.html
v1.0.0/: index.html  objects.inv
v1.0.1/search/: search_index.json
v1.0.1/toolboxes/toolbox-pyspark/: index.html
v1.0.1/toolboxes/toolbox-python/: index.html
v1.1.0/: 404.html  index.html
v1.1.0/toolboxes/toolbox-pyspark/: index.html
v1.1.0/toolboxes/toolbox-python/: index.html
v1.2.0/: 404.html  index.html
v1.2.0/search/: search_index.json
v1.2.0/toolboxes/synthetic-data-generators/: index.html
v1.2.0/toolboxes/toolbox-pyspark/: index.html
v1.2.0/toolboxes/toolbox-python/: index.html
v1.3.0/: 404.html
v1.3.0/guides/: index.html
v1.3.0/guides/querying-data/: index-pandas-r.ipynb  index-sql-r.ipynb  index.html
v1.3.0/search/: search_index.json
v1.3.0/toolboxes/toolbox-pyspark/: index.html
v1.3.0/toolboxes/toolbox-python/: index.html
v1.3.1/: index.html
v1.3.1/guides/querying-data/: index-sql-r.ipynb  index.html
v1.3.1/toolboxes/synthetic-data-generators/: index.html
v1.3.2/: 404.html  index.html
v1.3.2/guides/: index.html
v1.3.2/guides/querying-data/: index-pandas-r.ipynb  index-polars-r.ipynb  index-r.ipynb  index.html
v1.3.2/search/: search_index.json
v1.3.2/toolboxes/synthetic-data-generators/: index.html
v1.3.2/toolboxes/toolbox-pyspark/: index.html
v1.3.2/toolboxes/toolbox-python/: index.html
v1.4.0/: 404.html  index.html
v1.4.0/guides/: index.html
v1.4.0/guides/querying-data/: index.html
v1.4.0/search/: search_index.json
v1.4.0/toolboxes/synthetic-data-generators/: index.html
v1.4.0/toolboxes/toolbox-pyspark/: index.html
v1.4.0/toolboxes/toolbox-python/: index.html
v1.5.0/: 404.html  index.html
v1.5.0/guides/: index.html
v1.5.0/guides/querying-data/: index-pyspark-r.ipynb  index.html
v1.5.0/search/: search_index.json
v1.5.0/toolboxes/docstring-format-checker/: index.html
v1.5.0/toolboxes/synthetic-data-generators/: index.html
v1.5.0/toolboxes/toolbox-pyspark/: index.html
v1.5.0/toolboxes/toolbox-python/: index.html
v1.5.0/toolboxes/ts-stat-tests/: index.html
v1.5.1/: 404.html  index.html
v1.5.1/guides/: index.html
v1.5.1/guides/querying-data/: index-sql-r.ipynb  index.html
v1.5.1/toolboxes/docstring-format-checker/: index.html
v1.5.1/toolboxes/synthetic-data-generators/: index.html
v1.5.1/toolboxes/toolbox-pyspark/: index.html
v1.5.1/toolboxes/toolbox-python/: index.html
v1.5.1/toolboxes/ts-stat-tests/: index.html
