[build-system]
requires = ["uv_build>=0.7.3,<0.8.0"]
build-backend = "uv_build"

[project]
name = "data-science-extensions"
version = "1.4.0"
description = "The Data Science Extensions provides helpful utilities and extensions for data science projects."
readme = "README.md"
license = "MIT"
authors = [
    { name="Chris Mahoney", email="dse@data-science-extensions.com" },
]
maintainers = [
    { name="Chris Mahoney", email="dse@data-science-extensions.com" },
]
classifiers = [
    "Topic :: Software Development :: Build Tools",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Testing :: Unit",
    "Topic :: Utilities",
]
requires-python = ">=3.13,<4.0"
dependencies = [
    "typeguard==4.*",
]

[project.urls]
Homepage = "https://data-science-extensions.com"
Documentation = "https://data-science-extensions.com"
Repository = "https://github.com/data-science-extensions/website"
Changelog = "https://github.com/data-science-extensions/website/releases"
Issues = "https://github.com/data-science-extensions/website/issues"

[project.scripts]
lint = "cli.scripts:lint"
check = "cli.scripts:check"
lint-check = "cli.scripts:lint_check"
sync = "cli.scripts:uv_sync"
check-pytest = "cli.scripts:check_pytest"
reformat-file = "cli.scripts:reformat_file_cli"
convert-md-to-ipynb = "cli.scripts:convert_markdown_to_notebook_cli"
reformat-and-convert-md-to-ipynb = "cli.scripts:format_and_convert_cli"
extract-sections-from-markdown-file = "cli.scripts:extract_sections_from_markdown_file_cli"

[dependency-groups]
dev = [
    "black==25.*",
    "blacken-docs==1.*",
    "codespell==2.*",
    "ipykernel==6.*",
    "isort==6.*",
    "pre-commit==4.*",
    "pycln==2.*",
    "pylint==3.*",
    "pyupgrade==3.*",
]
docs = [
    "black==25.*",
    "docstring-inheritance==2.*",
    "livereload==2.*",
    "mike==2.*",
    "mkdocs==1.*",
    "mkdocs-autorefs==1.*",
    "mkdocs-coverage==1.*",
    "mkdocs-material==9.*",
    "mkdocstrings==0.*",
    "mkdocstrings-python==1.*",
    "jupytext==1.*",  # <-- Used to convert notebooks to markdown
]
docs-dev = [
    "numpy==2.*",
    "pandas==2.*",
    "tabulate==0.*",
    "plotly==6.*",
    "pyspark==3.*",
    "polars==1.*",
    "pyarrow==20.*",  # <-- Used for converting from polars to pandas
    "setuptools==80.*",  # <-- Dependency for pyspark
]

[tool.black]
color = true
line-length = 120
exclude = '''
/(
    \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
    | env
    | venv
)/
'''

[tool.codespell]
ignore-words-list = "demog"

[tool.isort]
import_heading_future = "Future Library Imports"
import_heading_stdlib = "StdLib Imports"
import_heading_thirdparty = "Third Party Imports"
import_heading_firstparty = "Local First Party Imports"
import_heading_localfolder = "Local Module Imports"
profile = "black"
split_on_trailing_comma = true
combine_as_imports = true
lines_after_imports = 2
